<resources>
    <string name="app_name">RpiRemote</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="chk_lbl_input">Is input</string>
    <string name="light1">Light 1 (pin17)</string>
    <string name="light2">Light 2 (pin18)</string>
    <string name="exit">Exit</string>
    <string name="item_refresh">Refresh</string>
    <string name="sharedPreferencesWebiopi">sharedPreferencesWebiopi</string>
    <string name="sharedPreferencesHost">sharedPreferencesHost</string>
    <string name="sharedPreferencesPort">sharedPreferencesPort</string>
    <string name="sharedPreferencesUser">sharedPreferencesUser</string>
    <string name="sharedPreferencesPass">sharedPreferencesPass</string>
</resources>
