<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
    <item
        android:icon="@drawable/navigation_refresh"
        android:id="@+id/item_refresh"
        android:orderInCategory="99"
        android:title="@string/item_refresh"
        app:showAsAction="ifRoom|withText" />

    <item
        android:icon="@drawable/action_settings"
        android:id="@+id/action_settings"
        android:orderInCategory="101"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/exit"
        android:orderInCategory="102"
        android:title="@string/exit"
        app:showAsAction="never"/>
</menu>
