
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" >

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/isconnectedWrap">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/isconnected"
            android:paddingTop="10dp"
            android:gravity="center"
            android:textColor="#fff"
            android:paddingBottom="10dp" />

    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/checkboxInput"
        android:layout_below="@+id/isconnectedWrap">
    <CheckBox
        android:id="@+id/chkIsInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chk_lbl_input" />

    <ToggleButton
        android:id="@+id/btnPort"
        android:layout_width="100dp"
        android:layout_height="50dp" />
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/checkboxInput"
        android:id="@+id/linearLayout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/light1"
            android:id="@+id/textViewLight1"
            android:layout_weight="0.50"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/light2"
            android:id="@+id/textViewLight2"
            android:layout_weight="0.50"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/lightButtonsLayout"
        android:layout_below="@+id/linearLayout">

        <ToggleButton
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:id="@+id/light1"
            android:layout_weight="0.50" />

        <ToggleButton
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:id="@+id/light2"
            android:layout_weight="0.50" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/lightButtonsLayout"

        android:id="@+id/temperaturesLayout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:id="@+id/temp0"
            android:layout_weight="0.50"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:id="@+id/temp1"
            android:layout_weight="0.50"/>

    </LinearLayout>



</RelativeLayout>